--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h1> Welcome to my Profile</h1>
   
         <img src="two.jpg"  alt="Person" class="card__image">
-        <p class="card__name" >sathish</p>
+        <p class="card__name" >sathish p</p>
         <div class="grid-container">
     
           <div class="grid-child-posts">
