--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
              college name : Sa Engineering college<br>
              percentage :80%<br>
 
-            school name : dhivya matriculation hr school<br>
+            school name : dhivya matriculation hr  sec school<br>
             SCHOOL :12 th<br>
             percentage : 76%<br>
              </p>
